# sdxl-training

./: .gitignore  DEMO.md  README.md  USAGE.md  pyproject.toml  requirements.txt  train.py
configs/examples/: lora_example.yaml
scripts/: migrate_metadata.py  run_benchmark.py
tests/: test_benchmark.py  test_caption.py  test_checkpoint.py  test_config.py  test_dataset.py  test_lora.py  test_metadata_features.py  test_trainer_integration.py
trainer/: __init__.py  benchmark.py  bucketing.py  caption.py  checkpoint.py  config.py  dataset.py  logging.py
trainer/engine/: trainer.py
trainer/methods/lora/: exporter.py  injection.py
