[project]
name = "sdxl-training"
version = "0.1.0"
description = "A lightweight, configurable, and extensible toolkit for SDXL training."
authors = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "AGPL-3.0" }
dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.28.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pillow>=9.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
# Optional memory-efficient attention backend for the UNet. Pinned to the build
# that matches the locked torch==2.5.1. The trainer falls back to diffusers'
# default SDPA attention when xformers is not installed.
xformers = ["xformers==0.0.28.post3"]

[project.scripts]
sdxl-train = "train:main"

[tool.poetry]
packages = [
    { include = "trainer" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
